@@ -38,5 +38,4 @@ layer at (0,0) size 800x600
         RenderBlock (anonymous) at (14,42) size 756x0
         RenderBlock (anonymous) at (14,42) size 756x0
           RenderInline {SPAN} at (0,0) size 0x0
-          RenderText {#text} at (0,0) size 0x0
 caret: position 3 of child 0 {#text} of child 1 {SPAN} of child 1 {DIV} of child 1 {BODY} of child 0 {HTML} of document
